# reference-api-service

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.postgres.yml  pyproject.toml
.github/workflows/: ci.yml  image-publish.yml
alembic/: env.py
alembic/versions/: 20260414_0001_initial_schema.py
contracts/: openapi-v1.json
docs/runbooks/: incident-rollback-recovery.md
scripts/: export_openapi.py  init_postgres.sql  migrate_postgres.sh  run_postgres_integration_tests.sh  setup_dev.sh
src/reference_api_service/: __init__.py  main.py  settings.py
src/reference_api_service/adapters/inbound/http/: router.py  schemas.py
src/reference_api_service/adapters/outbound/: in_memory.py  postgres.py
src/reference_api_service/application/: uow.py  use_cases.py
src/reference_api_service/domain/: entities.py  errors.py  repositories.py
tests/: conftest.py  test_api_smoke.py  test_compatibility_alias_routes.py  test_openapi_contract.py  test_poc_golden_regression.py  test_postgres_integration.py
tests/fixtures/: poc_reference_golden.json
